Bug 345587 r=bryner sr=sicking Spellchecker hangs when replacing word