editor/libeditor/html/nsWSRunObject.cpp
@@ -1938,12 +1938,13 @@ nsWSRunObject::GetWSPointAfter(nsIDOMNode *aNode, PRInt32 aOffset, WSPoint *outP
   // Note: only to be called if aNode is not a ws node.  
   
   // binary search on wsnodes
-  PRInt32 numNodes, curNum, lastNum;
+  PRInt32 numNodes, firstNum, curNum, lastNum;
   numNodes = mNodeArray.Count();
   
   if (!numNodes) 
     return NS_OK; // do nothing if there are no nodes to search
-  
+
+  firstNum = 0;
   curNum = numNodes/2;
   lastNum = numNodes;
   PRInt16 cmp=0;
@@ -1954,40 +1955,31 @@ nsWSRunObject::GetWSPointAfter(nsIDOMNode *aNode, PRInt32 aOffset, WSPoint *outP
   // which is mongo expensive
   while (curNum != lastNum)
   {
-    PRUint32 savedCur = curNum;
     curNode = mNodeArray[curNum];
     cmp = mHTMLEditor->sRangeHelper->ComparePoints(aNode, aOffset, curNode, 0);
     if (cmp < 0)
-    {
-      if (lastNum > curNum)
-        curNum = curNum/2;
-      else
-        curNum = (curNum+lastNum)/2;
-    }
+      lastNum = curNum;
     else
-    {
-      if (lastNum > curNum)
-        curNum = (curNum+lastNum)/2;
-      else
-        curNum = (curNum+numNodes)/2;
-    }
-    lastNum = savedCur;
+      firstNum = curNum + 1;
+    curNum = (lastNum - firstNum) / 2 + firstNum;
+    NS_ASSERTION(firstNum <= curNum && curNum <= lastNum, "Bad binary search");
   }
-  
-  nsCOMPtr<nsIContent> textNode(do_QueryInterface(curNode));
-  
-  if (cmp < 0)
-  {
+
+  // When the binary search is complete, we always know that the current node
+  // is the same as the end node, which is always past our range. Therefore,
+  // we've found the node immediately after the point of interest.
+  if (curNum == mNodeArray.Count()) {
+    // they asked for past our range (it's after the last node). GetCharAfter
+    // will do the work for us when we pass it the last index of the last node.
+    nsCOMPtr<nsIContent> textNode(do_QueryInterface(mNodeArray[curNum-1]));
+    WSPoint point(textNode, textNode->TextLength(), 0);
+    return GetCharAfter(point, outPoint);
+  } else {
+    // The char after the point of interest is the first character of our range.
+    nsCOMPtr<nsIContent> textNode(do_QueryInterface(mNodeArray[curNum]));
     WSPoint point(textNode, 0, 0);
     return GetCharAfter(point, outPoint);
   }
-  else
-  {
-    WSPoint point(textNode, textNode->TextLength(), 0);
-    return GetCharAfter(point, outPoint);
-  }
-  
-  return NS_ERROR_FAILURE;
 }
 
 nsresult 
@@ -1996,12 +1988,13 @@ nsWSRunObject::GetWSPointBefore(nsIDOMNode *aNode, PRInt32 aOffset, WSPoint *out
   // Note: only to be called if aNode is not a ws node.  
   
   // binary search on wsnodes
-  PRInt32 numNodes, curNum, lastNum;
+  PRInt32 numNodes, firstNum, curNum, lastNum;
   numNodes = mNodeArray.Count();
   
   if (!numNodes) 
     return NS_OK; // do nothing if there are no nodes to search
   
+  firstNum = 0;
   curNum = numNodes/2;
   lastNum = numNodes;
   PRInt16 cmp=0;
@@ -2012,40 +2005,32 @@ nsWSRunObject::GetWSPointBefore(nsIDOMNode *aNode, PRInt32 aOffset, WSPoint *out
   // which is mongo expensive
   while (curNum != lastNum)
   {
-    PRUint32 savedCur = curNum;
     curNode = mNodeArray[curNum];
     cmp = mHTMLEditor->sRangeHelper->ComparePoints(aNode, aOffset, curNode, 0);
     if (cmp < 0)
-    {
-      if (lastNum > curNum)
-        curNum = curNum/2;
-      else
-        curNum = (curNum+lastNum)/2;
-    }
+      lastNum = curNum;
     else
-    {
-      if (lastNum > curNum)
-        curNum = (curNum+lastNum)/2;
-      else
-        curNum = (curNum+numNodes)/2;
-    }
-    lastNum = savedCur;
+      firstNum = curNum + 1;
+    curNum = (lastNum - firstNum) / 2 + firstNum;
+    NS_ASSERTION(firstNum <= curNum && curNum <= lastNum, "Bad binary search");
   }
-  
-  nsCOMPtr<nsIContent> textNode(do_QueryInterface(curNode));
-  
-  if (cmp > 0)
-  {
+
+  // When the binary search is complete, we always know that the current node
+  // is the same as the end node, which is always past our range. Therefore,
+  // we've found the node immediately after the point of interest.
+  if (curNum == mNodeArray.Count()) {
+    // get the point before the end of the last node, we can pass the length
+    // of the node into GetCharBefore, and it will return the last character.
+    nsCOMPtr<nsIContent> textNode(do_QueryInterface(mNodeArray[curNum - 1]));
     WSPoint point(textNode, textNode->TextLength(), 0);
     return GetCharBefore(point, outPoint);
+  } else {
+    // we can just ask the current node for the point immediately before it,
+    // it will handle moving to the previous node (if any) and returning the
+    // appropriate character
+    nsCOMPtr<nsIContent> textNode(do_QueryInterface(mNodeArray[curNum]));
+    WSPoint point(textNode, 0, 0);
   }
-  else
-  {
-    WSPoint point(textNode,0,0);
-    return GetCharBefore(point, outPoint);
-  }
-  
-  return NS_ERROR_FAILURE;
 }
 
 nsresult
